# Starfleet-Command

./: README.md
Starfleet_Command/: AIDirector.puml  CMakeLists.txt  Crosshair.cpp  Crosshair.hpp  Cursor.cpp  Cursor.hpp  Enemy.cpp  Enemy.hpp  Perk&Upgrades.puml  SpriteComponent.cpp  SpriteComponent.hpp  StarshipDeploymentArchitecture.puml  TestClass.cpp  TestClass.hpp  UIArchitecture.puml  codedump.txt  codethoughts.txt  main.cpp
Starfleet_Command/Components/: AiComponent.cpp  AiComponent.hpp  AudioComponent.cpp  HealthComponent.cpp  HealthComponent.hpp  MovementComponent.cpp  MovementComponent.hpp  NewSpriteComponent.cpp  NewSpriteComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TestComponent.cpp  TestComponent.hpp  WeaponComponent.cpp  WeaponComponent.hpp
Starfleet_Command/ECS/: Component.hpp  Entity.cpp  Entity.hpp  GameObject.cpp  GameObject.hpp  Object.cpp  Object.hpp
Starfleet_Command/Game/: Game.cpp  Game.hpp
Starfleet_Command/GameUI/: Button.cpp  Button.hpp  CommandMenu.cpp  CommandMenu.hpp  DamagePopUpEffect.cpp  DamagePopUpEffect.hpp  HUD.cpp  HUD.hpp  HealthBar.cpp  HealthBar.hpp  Panel.cpp  Panel.hpp  ShipCard.cpp  ShipCard.hpp
Starfleet_Command/Gamelibs/: ButtonElement.cpp  ButtonElement.hpp  ButtonInfoWidget.cpp  ButtonInfoWidget.hpp  GameHUD.cpp  GameHUD.hpp  GameSettings.cpp  GameSettings.hpp  GameUI.cpp  GameUI.hpp  ImageElement.cpp  ImageElement.hpp  InfoBoxElement.cpp  InfoBoxElement.hpp  InfoTooltip.cpp  Minimap.cpp  Minimap.hpp  MothershipStatusDisplay.cpp  MothershipStatusDisplay.hpp  ProgressBar.cpp  RNG.cpp  ScrapCollectionUpgradeButton.cpp  ScrapCollectionUpgradeButton.hpp  ScrapMetalManager.cpp  ScrapMetalManager.hpp  SpaceLane.cpp  SpaceLane.hpp  StarshipDeploymentButton.cpp  StarshipDeploymentButton.hpp  StarshipDeploymentManager.cpp  StarshipDeploymentManager.hpp  TextButtonElement.cpp  TextButtonElement.hpp  TextElement.cpp  TextElement.hpp  UIElement.hpp  UpgradeScrapCollectionButton.cpp  UpgradeScrapCollectionButton.hpp
Starfleet_Command/Interfaces/: IStarship.hpp
Starfleet_Command/Player/: Fleet.cpp  Fleet.hpp  Player.cpp  Player.h  Player.hpp  Player1.cpp  Player1.h  PlayerStats.hpp
Starfleet_Command/SceneManagement/: Scene.cpp  (+3 more)
(+297 files in other folders)
